introduce a token filter for typo fix